--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,7 @@ h2 {
   /* border-radius: 10px; */
   /* -webkit-box-shadow: 4px 4px 12px -4px rgba(0,0,0,0.66); 
   box-shadow: 4px 4px 12px -4px rgba(0,0,0,0.66); */
-  background-color: #add8e6;
+  background-color: #f7f7f7;
   text-align: left;
 }
 .displayEachUsers input,
